minor code modernisation in RunnableDeviceServiceProxy
- use pattern-matching instanceof where possible
- add 'unchecked' to SuppressWarnings in one place where required
- use stream.toList() instead of stream.collect(Collectors.toList()
     in a couple of places

Change-Id: I49b841579b1254c54f7094dde3459114f2ed749b